# MEK-MCP

./: .dockerignore  Dockerfile  README.md  app.py  fly.toml  mek_mcp_server.py  oszkdk_mcp_server.py  pyproject.toml  requirements.txt  test_live.py
.github/workflows/: fly-deploy.yml
